--- a/results/report.html
+++ b/results/report.html
@@ -1887,22 +1887,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,7102],[[4,5,6,0,[],[1,14,7088],[[7,8,9,0,[],[1,15,7085],[],[[10,0,0,[],[1,115,6983],[]]],[],[1,1,0,0]]],[],[],[1,1,0,0]]],[],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,227],[[4,5,6,0,[],[1,11,215],[[7,8,9,0,[],[1,13,204],[],[[10,0,0,[],[1,54,161],[]]],[],[1,1,0,0]]],[],[],[1,1,0,0]]],[],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*TPOTTROBOT","*/Users/dominiquemereaux/code/TPOTTROBOT","*..","*Test","*/Users/dominiquemereaux/code/TPOTTROBOT/test","*../test","*Recherche","*/Users/dominiquemereaux/code/TPOTTROBOT/test/recherche.robot","*../test/recherche.robot","*Test page accueil"]);
+window.output["strings"] = window.output["strings"].concat(["*","*TPOTTROBOT","*/Users/dominiquemereaux/code/TPOTTROBOT","*..","*Test","*/Users/dominiquemereaux/code/TPOTTROBOT/test","*../test","*chuckNorris","*/Users/dominiquemereaux/code/TPOTTROBOT/test/chuckNorris.robot","*../test/chuckNorris.robot","*Test obtenir une blague aleatoire"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:07","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:07","fail":0,"id":"s1","label":"TPOTTROBOT","name":"TPOTTROBOT","pass":1,"skip":0},{"elapsed":"00:00:07","fail":0,"id":"s1-s1","label":"TPOTTROBOT.Test","name":"Test","pass":1,"skip":0},{"elapsed":"00:00:07","fail":0,"id":"s1-s1-s1","label":"TPOTTROBOT.Test.Recherche","name":"Recherche","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:00","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:00","fail":0,"id":"s1","label":"TPOTTROBOT","name":"TPOTTROBOT","pass":1,"skip":0},{"elapsed":"00:00:00","fail":0,"id":"s1-s1","label":"TPOTTROBOT.Test","name":"Test","pass":1,"skip":0},{"elapsed":"00:00:00","fail":0,"id":"s1-s1-s1","label":"TPOTTROBOT.Test.chuckNorris","name":"chuckNorris","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1763670400470;
+window.output["baseMillis"] = 1763674116846;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 7106;
+window.output["generated"] = 233;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
